crates/pm-bridges/tests/snapshots/keepassxc_handshake__associate.snap
---
source: crates/pm-bridges/tests/keepassxc_handshake.rs
expression: associate
---
{
  "hash": "[database-hash]",
  "id": "keepassxc-browser",
  "nonce": "[nonce]",
  "success": "true",
  "version": "2.7.0"
}
