crates/pm-bridges/tests/snapshots/keepassxc_handshake__change_public_keys.snap
---
source: crates/pm-bridges/tests/keepassxc_handshake.rs
expression: handshake
---
{
  "action": "change-public-keys",
  "clientID": "[client-id]",
  "nonce": "[nonce]",
  "publicKey": "[host-public-key]",
  "success": "true",
  "version": "2.7.0"
}
