crates/pm-bridges/tests/snapshots/keepassxc_handshake__generate_password.snap
---
source: apps/cli/tests/keepassxc_handshake.rs
expression: generated
---
{
  "nonce": "[nonce]",
  "password": "[generated]",
  "success": "true",
  "version": "2.7.0"
}
