crates/pm-bridges/tests/snapshots/keepassxc_handshake__get_databasehash.snap
---
source: apps/cli/tests/keepassxc_handshake.rs
expression: hash
---
{
  "action": "hash",
  "hash": "[database-hash]",
  "nonce": "[nonce]",
  "success": "true",
  "version": "2.7.0"
}
