crates/pm-bridges/tests/snapshots/keepassxc_handshake__get_totp.snap
---
source: apps/cli/tests/keepassxc_handshake.rs
expression: totp
---
{
  "nonce": "[nonce]",
  "success": "true",
  "totp": "[totp]",
  "version": "2.7.0"
}
