crates/pm-bridges/tests/snapshots/keepassxc_handshake__lock_database.snap
---
source: crates/pm-bridges/tests/keepassxc_handshake.rs
expression: locked
---
{
  "action": "lock-database",
  "error": "Database not opened",
  "errorCode": 1,
  "nonce": "[nonce]"
}
