crates/pm-bridges/tests/snapshots/keepassxc_handshake__set_login.snap
---
source: apps/cli/tests/keepassxc_handshake.rs
expression: saved
---
{
  "count": null,
  "entries": null,
  "error": "",
  "hash": "[database-hash]",
  "nonce": "[nonce]",
  "success": "true",
  "version": "2.7.0"
}
