crates/pm-bridges/tests/snapshots/keepassxc_handshake__test_associate.snap
---
source: crates/pm-bridges/tests/keepassxc_handshake.rs
expression: tested
---
{
  "hash": "[database-hash]",
  "id": "[association-id]",
  "nonce": "[nonce]",
  "success": "true",
  "version": "2.7.0"
}
